2007-08-06  Michael Snyder  <msnyder@access-company.com>

	* ada-lang.c (desc_bounds): Comparison of function address to NULL.

2007-08-05  Jim Blandy  <jimb@codesourcery.com>

	* macroexp.c (init_buffer): Remove testing code that overrides the
	caller's length guess.
	(gather_arguments): Use a larger initial size, now that the vector
	growth code has been exercised.

2007-08-05  Pedro Alves  <pedro_alves@portugalmail.pt>

	* solib-target.c (solib_target_relocate_section_addresses): Add
	orig_delta to addr_high.

2007-08-04  Michael Snyder  <msnyder@access-company.com>

	* remote-fileio.c (remote_fileio_func_write): Memory leak.

	* breakpoint.c (print_one_breakpoint): Off by one error.

	* tracepoint.c (add_register): Off by one error.
	(stringify_collection_list): Free malloc buffer.

2007-08-03  Michael Snyder  <msnyder@access-company.com>

	* mi-cmd-var.c (mi_cmd_var_delete): Remove unused variable,
	stop memory leak, straighten out cleanups.

	* jv-lang.c (java_link_class_type): Guard against NULL.

2007-08-02  Michael Snyder  <msnyder@access-company.com>

	* gdbtypes.c (create_set_type): Test should only be done within
	the preceeding if block.  Otherwise, variable is uninitialized.

	* gdbtypes.c (check_typedef): Guard NULL.

2007-08-01  Michael Snyder  <msnyder@access-company.com>

	* cli/cli-decode.c (lookup_cmd): Check for null earlier, to 
	avoid dereference in lookup_cmd_1.

	* tui/tui-data.c (tui_alloc_content): Move assign out of if, 
	clean up long lines.
	(tui_alloc_generic_win_info): Tidy by using XMALLOC macro.
	(tui_alloc_win_info): Ditto.
	(tui_add_content_elements): Ditto.
	* tui/tui-file.c (tui_file_magic): Ditto.

2007-07-31  Michael Snyder  <msnyder@access-company.com>

	* breakpoint.c (breakpoint_init_inferior): Add 'else' to 'if'.
	True and false paths are mutually exclusive.

	* event-top.c (command_line_handler): Add pedantic return.

	* f-valprint.c (info_common_command): Bail out to prevent null
	pointer deref.  Break up a long line.
